# custom_ackermann_steering_controller_ros

./: CMakeLists.txt  EN.md  README.md  RU.md  package.xml
config/: ackermann_steering_config.yaml  pid_params.yaml  robot_joint_state_config.yaml
docker/: .env  Dockerfile  docker-compose.yml
launch/: ackermann_run.launch  gazebo.launch  rviz.launch
models/laberint_ground/: model.config  model.sdf
models/laberint_ground/materials/scripts/: laberint_ground.material
rviz/: base.rviz
scripts/: ackermann_steering_controller.py  keyboard_teleop.py  simple_control.py
urdf/: common_macro.xacro  corpus.xacro  main.xacro  wheel.xacro
world/: empty_world.world
